fix: remove horizontal scroll with the 320px layout

--- a/pages/pets/style.css
+++ b/pages/pets/style.css
@@ -375,8 +375,8 @@ template {
 }
 
 body {
-  overflow-x: hidden;
   min-width: 320px;
+  overflow-x: hidden;
 }
 
 section {
@@ -406,6 +406,7 @@ section {
 }
 
 html {
+  overflow-x: hidden;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 400;
   line-height: 160%;
