--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -3,8 +3,8 @@
 }
 
 body {
-    overflow-x: hidden;
     min-width: 320px;
+    overflow-x: hidden;
 }
 
 section {
@@ -32,6 +32,7 @@ section {
 }
 
 html {
+    overflow-x: hidden;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 400;
     line-height: $line-height;
